fix word spacing

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -60,6 +60,8 @@ nav {
 
 main {
   min-height: calc(100dvh - 100px);
+  letter-spacing: 0.5px;
+  word-spacing: -5px;
   padding: 0 0.625rem;
 
   &::-webkit-scrollbar {
